@@ -1,0 +1,14 @@
+﻿#if NETFRAMEWORK
+// ReSharper disable once CheckNamespace
+namespace System
+{
+    internal static class MathF
+    {
+        #region Methods
+
+        public static float Round(float x) => (float)Math.Round(x);
+
+        #endregion
+    }
+}
+#endif
