@@ -13,8 +13,10 @@
 ==================================
 + Targeting also .NET 5.0
 + Now panning a zoomed image is possible also by clicking and dragging with the mouse (besides usual scrolling).
++ Zooming is now possible also with keyboard shortcuts, the Auto Zoom button has now a drop-down part for the
+  additional options.
 * Manual zooming is enabled even if Auto Zoom is on; this turns off Auto Zoom automatically.
-* Smooth Zooming on/off affects also shrunk images (previously affected enlarged images only)
+* Turning smoothing of zoomed images on/off affects also shrunk images (previously affected enlarged images only).
 - Fixing possible errors when closing forms while an async operation is still in progress.
 * API changes:
   * Members are annotated for using C# 8.0 nullable references
